[package]
name = "isdocker"
version = "1.0.0"
edition = "2021"
authors = ["Shahnoor Mujawar"]
description = "Detect whether the current process is running inside a Docker or OCI container"
documentation = "https://docs.rs/isdocker"
repository = "https://github.com/shahnoormujawar/isdocker"
license = "MIT"
keywords = ["docker", "container", "environment", "runtime", "detection"]
categories = ["development-tools", "os"]
readme = "README.md"
exclude = [".github/"]
